gke/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gke-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-gke
  template:
    metadata:
      labels:
        app: nginx-gke
    spec:
      containers:
      - name: nginx-gke
        image: nginx:1.21.3-alpine
        ports:
        - containerPort: 80
