gke/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-gke-nodeport
  namespace: tomcat-gke
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: tomcat-gke
  type: NodePort
