gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-gke-internal
  namespace: tomcat-gke
  labels:
    run: tomcat-gke-internal
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tomcat-gke
